// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioField/> render() should render an enabled Radio field 1`] = `
<FormGroup
  tag="fieldset"
>
  <FormGroup
    check={true}
    className="mb-2"
    key="1"
    tag="div"
  >
    <Input
      checked={false}
      disabled={false}
      onChange={[Function]}
      type="radio"
    />
    <Label
      check={true}
      className="control-label ml-2"
      onClick={[Function]}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      foo
      <FormText
        className="description"
        color="muted"
        tag="small"
      >
        one of the options
      </FormText>
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    className="mb-2"
    key="2"
    tag="div"
  >
    <Input
      checked={true}
      disabled={false}
      onChange={[Function]}
      type="radio"
    />
    <Label
      check={true}
      className="control-label ml-2"
      onClick={[Function]}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      bar
      <FormText
        className="description"
        color="muted"
        tag="small"
      >
        another option
      </FormText>
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    className="mb-2"
    key="3"
    tag="div"
  >
    <Input
      checked={false}
      disabled={false}
      onChange={[Function]}
      type="radio"
    />
    <Label
      check={true}
      className="control-label ml-2"
      onClick={[Function]}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      baz
    </Label>
  </FormGroup>
</FormGroup>
`;

exports[`<RadioField/> should render a disabled Radio field 1`] = `
<FormGroup
  tag="fieldset"
>
  <FormGroup
    check={true}
    className="mb-2"
    key="1"
    tag="div"
  >
    <Input
      checked={false}
      disabled={true}
      onChange={null}
      type="radio"
    />
    <Label
      check={true}
      className="control-label ml-2"
      onClick={null}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      foo
      <FormText
        className="description"
        color="muted"
        tag="small"
      >
        one of the options
      </FormText>
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    className="mb-2"
    key="2"
    tag="div"
  >
    <Input
      checked={true}
      disabled={true}
      onChange={null}
      type="radio"
    />
    <Label
      check={true}
      className="control-label ml-2"
      onClick={null}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      bar
      <FormText
        className="description"
        color="muted"
        tag="small"
      >
        another option
      </FormText>
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    className="mb-2"
    key="3"
    tag="div"
  >
    <Input
      checked={false}
      disabled={true}
      onChange={null}
      type="radio"
    />
    <Label
      check={true}
      className="control-label ml-2"
      onClick={null}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      baz
    </Label>
  </FormGroup>
</FormGroup>
`;
